# sqlmodel-crud

./: database.db  pyproject.toml
sqlmodel_crud/: main.py
